include/maplibre_native_c/runtime.h


typedef uint64_t mln_offline_operation_id;
typedef struct mln_runtime_event {
  uint32_t type;
  uint32_t source_type;
  uint64_t source;
  int32_t code;
  uint32_t payload_type;
  uint32_t message_offset;
  uint32_t message_size;
  mln_runtime_event_payload payload;
} mln_runtime_event;
typedef struct mln_runtime_event_batch {
  uint32_t size;
  uint32_t event_size;
  const mln_runtime_event* events;
  size_t event_count;
  const char* messages;
  size_t messages_size;
  size_t remaining_count;
} mln_runtime_event_batch;
typedef mln_status (*mln_resource_transform_callback)(
  void* user_data, uint32_t kind, const char* url,
  mln_resource_transform_response* out_response
);
typedef struct mln_resource_transform {
  uint32_t size;
  mln_resource_transform_callback callback;
  void* user_data;
} mln_resource_transform;
typedef mln_status (*mln_http_header_transform_callback)(
  void* user_data, uint32_t kind, const char* url,
  mln_http_header_transform_response* out_response
);
typedef struct mln_http_header_transform {
  uint32_t size;
  mln_http_header_transform_callback callback;
  void* user_data;
} mln_http_header_transform;
typedef void (*mln_resource_request_cancel_callback)(void* user_data);
MLN_API mln_status mln_resource_request_cancelled(
  mln_resource_request_handle handle, bool* out_cancelled
) MLN_NOEXCEPT;
MLN_API mln_status mln_resource_request_set_cancel_callback(
  mln_resource_request_handle handle,
  mln_resource_request_cancel_callback callback, void* user_data,
  bool* out_cancelled
) MLN_NOEXCEPT;
MLN_API void mln_resource_request_release(
  mln_resource_request_handle handle
) MLN_NOEXCEPT;
MLN_API mln_status mln_resource_request_wait_until_retired(
  mln_resource_request_handle handle
) MLN_NOEXCEPT;
MLN_API mln_status mln_runtime_set_resource_transform(
  mln_runtime runtime, const mln_resource_transform* transform
) MLN_NOEXCEPT;
MLN_API mln_status
mln_runtime_clear_resource_transform(mln_runtime runtime) MLN_NOEXCEPT;
MLN_API mln_status mln_runtime_set_http_header_transform(
  mln_runtime runtime, const mln_http_header_transform* transform
) MLN_NOEXCEPT;
MLN_API mln_status
mln_runtime_clear_http_header_transform(mln_runtime runtime) MLN_NOEXCEPT;
MLN_API mln_status mln_runtime_run_ambient_cache_operation_start(
  mln_runtime runtime, uint32_t operation,
  mln_offline_operation_id* out_operation_id
) MLN_NOEXCEPT;
MLN_API mln_status mln_runtime_set_maximum_ambient_cache_size_start(
  mln_runtime runtime, uint64_t size, mln_offline_operation_id* out_operation_id
) MLN_NOEXCEPT;
MLN_API mln_status mln_runtime_offline_operation_discard(
  mln_runtime runtime, mln_offline_operation_id operation_id
) MLN_NOEXCEPT;
MLN_API mln_status mln_runtime_destroy(mln_runtime runtime) MLN_NOEXCEPT;
MLN_API mln_status mln_runtime_pump(
  mln_runtime runtime, int64_t timeout_ms, int64_t budget_ms
) MLN_NOEXCEPT;
MLN_API mln_status mln_runtime_wake_source_acquire(
  mln_runtime runtime, mln_wake_source* out_source
) MLN_NOEXCEPT;
MLN_API mln_status mln_wake_source_signal(mln_wake_source source) MLN_NOEXCEPT;
MLN_API void mln_wake_source_destroy(mln_wake_source source) MLN_NOEXCEPT;
MLN_API mln_runtime_event_batch
mln_runtime_event_batch_default(void) MLN_NOEXCEPT;
MLN_API mln_status mln_runtime_drain_events(
  mln_runtime runtime, size_t max_events, mln_runtime_event_batch* out_batch
) MLN_NOEXCEPT;
MLN_API mln_status
mln_runtime_set_event_mask(mln_runtime runtime, uint64_t mask) MLN_NOEXCEPT;
MLN_API mln_status mln_runtime_get_event_mask(
  mln_runtime runtime, uint64_t* out_mask
) MLN_NOEXCEPT;